// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Type /> renders body 1`] = `
<span
  className="type type__body type__black"
>
  body
</span>
`;

exports[`<Type /> renders display-1 1`] = `
<span
  className="type type__display-1 type__black"
>
  display-1
</span>
`;

exports[`<Type /> renders display-2 1`] = `
<span
  className="type type__display-2 type__black"
>
  display-2
</span>
`;

exports[`<Type /> renders heading-1 1`] = `
<span
  className="type type__heading-1 type__black"
>
  heading-1
</span>
`;

exports[`<Type /> renders heading-2 1`] = `
<span
  className="type type__heading-2 type__black"
>
  heading-2
</span>
`;

exports[`<Type /> renders normal copy 1`] = `
<span
  className="type type__default type__black"
>
  normal
</span>
`;

exports[`<Type /> renders subtext 1`] = `
<span
  className="type type__subtext type__black"
>
  subtext
</span>
`;
